[package]
name = "rextract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.20.1", features=["macros", "rt-multi-thread"]}
reqwest = "0.11.11"
futures = "0.3.24"
indicatif = "0.17.0"
lazy_static = "1.4.0"
fancy-regex = "0.10.0"
openssl = { version = "0.10.40", features = ["vendored"] }
headless_chrome = {git = "https://github.com/iustin24/rust-headless-chrome?", features = ["fetch"]}
